# seasonality

./: README.md  analysis.Rmd  functions.R  util.R
pypkg/: setup.cfg
pypkg/src/rtseason/: __init__.py  data.txt  fit.txt  seasons.py  tests.py
