[metadata]
name = rtseason
version = 1.1.1
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = Analyzing river seasonal thermal regimes in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum-dan/seasonality
project_urls = 
	Bug Tracker = https://github.com/quantum-dan/seasonality/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.0
install_requires = 
	pandas
	numpy

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0